CRUD complete for borrow and code refactor