@@ -3,6 +3,7 @@ package com.iceb.library.repository;
 import com.iceb.library.TestUtils;
 import com.iceb.library.entity.Author;
 import com.iceb.library.entity.Book;
+import com.iceb.library.entity.Borrow;
 import com.iceb.library.entity.Customer;
 import com.iceb.library.entity.Genre;
 import com.iceb.library.entity.Publisher;
@@ -15,6 +16,7 @@ import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabas
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 
 import java.util.Arrays;
+import java.util.List;
 
 @DataJpaTest
 @AutoConfigureTestDatabase(replace= AutoConfigureTestDatabase.Replace.NONE)
@@ -38,12 +40,16 @@ public abstract class TestRepositoryHelper {
     @Autowired
     protected TopicRepository topicRepository;
 
+    @Autowired
+    protected BorrowRepository borrowRepository;
+
     protected Book bookTest;
     protected Customer customerTest;
     protected Genre genreTest;
     protected Author authorTest;
     protected Publisher publisherTest;
     protected Topic topicTest;
+    protected Borrow borrowTest;
 
     @BeforeEach
     public void setUp() {
@@ -61,16 +67,20 @@ public abstract class TestRepositoryHelper {
         topicTest = topicRepository.save(topicTest);
 
         bookTest = TestUtils.book(false);
-        bookTest.setGenres(Arrays.asList(genreTest));
-        bookTest.setAuthors(Arrays.asList(authorTest));
+        bookTest.setGenres(List.of(genreTest));
+        bookTest.setAuthors(List.of(authorTest));
         bookTest.setPublisher(publisherTest);
-        bookTest.setTopics(Arrays.asList(topicTest));
+        bookTest.setTopics(List.of(topicTest));
 
         bookTest = bookRepository.save(bookTest);
 
         customerTest = TestUtils.customer(false);
         customerTest.setRole(Role.ADMIN);
         customerTest = customerRepository.save(customerTest);
+
+        borrowTest = TestUtils.borrow();
+        borrowTest.setCustomer(customerTest);
+        borrowTest = borrowRepository.save(borrowTest);
     }
 
     @AfterEach
@@ -81,5 +91,6 @@ public abstract class TestRepositoryHelper {
         publisherRepository.deleteAll();
         topicRepository.deleteAll();
         customerRepository.deleteAll();
+        borrowRepository.deleteAll();
     }
 }
